--- a/package.json
+++ b/package.json
@@ -22,7 +22,13 @@
     "@angular/platform-browser": "~9.0.6",
     "@angular/platform-browser-dynamic": "~9.0.6",
     "@angular/router": "~9.0.6",
+    "hammerjs": "^2.0.8",
+    "moment": "^2.24.0",
+    "ng-pick-datetime": "^7.0.0",
+    "ngx-image-cropper": "^3.1.5",
+    "ngx-material-timepicker": "^5.5.1",
     "rxjs": "~6.5.4",
+    "rxjs-compat": "^6.5.5",
     "tslib": "^1.10.0",
     "zone.js": "~0.10.2"
   },
